# 4InLineMiniMax

./: CMakeLists.txt  FourInLine.h  MiniMax.h  TranspositionTable.h  auto_tests.h  main.cpp  zobristhashing.h
TEST_BOARDS/: test_board0.txt  test_board1.txt  test_board10.txt  test_board2.txt  test_board3.txt  test_board4.txt  test_board5.txt  test_board6.txt  test_board7.txt  test_board8.txt  test_board9.txt
